--- a/_data/svbtle.yml
+++ b/_data/svbtle.yml
@@ -1,18 +1,18 @@
 ---
-subtitle: "Any fool can write code that a computer can understand. Good programmers write code that humans can understand."
-profile_url: http://alexis.duranm.com
-profile_name: Alexis Duran
-website_url: http://fanzy-blog.com
-website_url_text: This is a nice blog with stuff
-website_url_about: http://fanzy-blog.com/about
-website_name: My Fanzy Website
-email_with_subject: mailto:hello@example.com?subject=hi
-twitter: duranmla
+subtitle: "Life would be much easier if i had the source."
+profile_url: http://typeofundefined.io
+profile_name: Konstantinos Margaritis
+website_url: http://typeofundefined.io
+website_url_text: Dev things
+website_url_about: http://margaritis.org/about
+website_name: "Dev, startups and harmony"
+email_with_subject: mailto:kotsos.marga@gmail.com?subject=hi
+twitter: _margaritis
 feed_url: http://feedurlhere.com
 typekit_url: typekiturlhere
-ga_account: your-ga-code-here
-ga_domain: svbtlejekyll.example.com
+ga_account: UA-60250985-1
+ga_domain: typeofundefined.io
 
 # Enable kudos widget
 enable_kudos: true
-kudos_url: http://kudos-server-example.herokuapp.com/kudos
+kudos_url: http://margaritis.herokuapp.com/kudos
