--- a/_data/svbtle.yml
+++ b/_data/svbtle.yml
@@ -2,7 +2,7 @@
 subtitle: "Life would be much easier if i had the source."
 profile_url: http://typeofundefined.io
 profile_name: Konstantinos Margaritis
-blog_url: "http://typeofundefined.io"
+blog_url: "typeofundefined.io"
 blog_name: "Dev, startups and harmony"
 website_url: "margaritis.org"
 website_name: "margaritis.org"
